--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/gapi": "0.0.41",
     "@types/gapi.auth2": "0.0.55",
+    "@types/gapi.calendar": "^3.0.6",
+    "@types/gapi.client": "^1.0.5",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
+    "calend": "^0.1.3",
     "firebase": "^9.5.0",
     "gapi-script": "^1.2.0",
     "react": "^17.0.2",
