--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.2",
+    "@radix-ui/react-dialog": "^0.1.3",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -20,6 +21,7 @@
     "calend": "^0.1.3",
     "firebase": "^9.5.0",
     "gapi-script": "^1.2.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
