--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.2",
+    "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.3",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@radix-ui/react-dialog": "^0.1.3",
+    "@radix-ui/react-popover": "^0.1.3",
+    "@radix-ui/react-scroll-area": "^0.1.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -19,10 +28,13 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
     "calend": "^0.1.3",
+    "date-fns": "^2.27.0",
     "firebase": "^9.5.0",
     "gapi-script": "^1.2.0",
+    "kalend": "^0.2.1",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -62,7 +74,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.15",
+    "@types/styled-components": "^5.1.18",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
