--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "calend": "^0.1.3",
     "date-fns": "^2.27.0",
     "firebase": "^9.5.0",
+    "framer-motion": "^4.1.17",
     "gapi-script": "^1.2.0",
     "kalend": "^0.2.1",
     "randomcolor": "^0.6.2",
@@ -42,6 +43,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "styled-components": "^5.3.3",
     "twin.macro": "^2.8.1",
     "typescript": "^4.1.6"
