--- a/package.json
+++ b/package.json
@@ -46,7 +46,19 @@
     "react-vis": "^1.11.7",
     "styled-components": "^5.3.3",
     "twin.macro": "^2.8.1",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "scripts": {
     "start": "craco start",
